fabric/testdata/out/ing_sugarcane-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"034b420d-673b-11e9-8daa-02b5f12a6be8","deployment-id":"d-ccbr8yx3m7q8jqmamix8fuc5m","pipeline-id":"l-6yn1sv8ryxtz4pzezhuwwcjc8"},"name":"sugarcane-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"sugarcane.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"sugarcane","servicePort":"http"},"pathType":"ImplementationSpecific"}]}},{"host":"spp-commodity-group-data-test.zalandoapis.com","h [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2019-06-17T13:46:11Z"
  generation: 1
  labels:
    controller-uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
    deployment-id: d-ccbr8yx3m7q8jqmamix8fuc5m
    pipeline-id: l-6yn1sv8ryxtz4pzezhuwwcjc8
  name: sugarcane-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: sugarcane
    uid: 034b420d-673b-11e9-8daa-02b5f12a6be8
  resourceVersion: "1370351709"
  uid: 4474f78d-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: sugarcane.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-commodity-group-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: sugarcane
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
